# GRL

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_GUIDE.md  Plan.md  QUICK_START.md  README.md
.claude/: settings.local.json
examples/: week1_test.cpp
include/grl/core/: platform.h  types.h
include/grl/graphics/: color.h  framebuffer.h  rasterizer.h  renderer.h
include/grl/math/: mat4.h  vec3.h  vec4.h
include/grl/utils/: image_writer.h
src/graphics/: color.cpp  framebuffer.cpp  rasterizer.cpp  renderer.cpp
src/math/: mat4.cpp  vec3.cpp  vec4.cpp
src/utils/: image_writer.cpp
tests/: CMakeLists.txt
tests/graphics/: test_framebuffer.cpp
tests/math/: test_mat4.cpp  test_vec3.cpp  test_vec4.cpp
